# Audit-Helper

./: .gitignore  README.md  pyproject.toml  solodit_report.md
scripts/: scan.py
src/: __init__.py  audit.py  cache.py  cli.py  client.py  config.py  index.py
src/audit_helper/: __init__.py  audit.py  cache.py  cli.py  client.py  index.py
