[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-helper"
version = "0.1.0"
description = "Scan codebases for patterns similar to known Solodit reported bugs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.scripts]
audit-helper = "cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
